syntax = "proto3";

option go_package = "github.com/almeida-raphael/arpc_examples";

message TypeBinary {
  bytes     binary = 1;
}