syntax = "proto3";

option go_package = "github.com/almeida-raphael/arpc_examples";

message TypeInt64 {
  int64     int64 = 1;
}
